--- a/src/com/defrag/redmineplugin/view/form/LogWorkForm.form
+++ b/src/com/defrag/redmineplugin/view/form/LogWorkForm.form
@@ -21,7 +21,7 @@
               <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Тип работы: *"/>
+              <text value="Work type: *"/>
             </properties>
           </component>
           <component id="76982" class="javax.swing.JComboBox" binding="workTypeCmbx">
@@ -30,7 +30,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="13c7e" class="javax.swing.JTextArea" binding="commentTArea">
+          <component id="13c7e" class="javax.swing.JTextArea" binding="commentArea">
             <constraints>
               <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="7" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
@@ -49,7 +49,7 @@
               <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Количество часов: *"/>
+              <text value="Spent hours: *"/>
             </properties>
           </component>
           <grid id="53539" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -73,7 +73,7 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Дата: *"/>
+              <text value="Date: *"/>
             </properties>
           </component>
           <component id="5acd3" class="javax.swing.JLabel">
@@ -81,7 +81,7 @@
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Комментарий: *"/>
+              <text value="Comment: *"/>
             </properties>
           </component>
         </children>
