--- a/src/com/defrag/redmineplugin/view/form/TaskForm.form
+++ b/src/com/defrag/redmineplugin/view/form/TaskForm.form
@@ -56,7 +56,7 @@
             </constraints>
             <properties/>
           </component>
-          <grid id="b619e" binding="changeReasonPane" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="b619e" binding="changeEstimatePane" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -64,7 +64,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="9df28" class="javax.swing.JTextArea" binding="commentArea">
+              <component id="9df28" class="javax.swing.JTextArea" binding="changeEstimateArea">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="50"/>
@@ -92,7 +92,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="749b5" class="javax.swing.JTextArea" binding="notesArea">
+              <component id="749b5" class="javax.swing.JTextArea" binding="changeStatusArea">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="50"/>
