--- a/src/com/defrag/redmineplugin/view/form/TaskForm.form
+++ b/src/com/defrag/redmineplugin/view/form/TaskForm.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="577" height="420"/>
+      <xy x="48" y="54" width="577" height="458"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -56,7 +56,7 @@
             </constraints>
             <properties/>
           </component>
-          <grid id="b619e" binding="changeEstimatePane" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="b619e" binding="changeEstimatePane" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -82,9 +82,17 @@
                   <text value="Estimate change reason: *"/>
                 </properties>
               </component>
+              <component id="c4cc9" class="javax.swing.JCheckBox" binding="estimateCommentChbx">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="is parent's commit"/>
+                </properties>
+              </component>
             </children>
           </grid>
-          <grid id="efe59" binding="changeStatusPane" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="efe59" binding="changeStatusPane" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -107,6 +115,14 @@
                 <properties>
                   <text value="Status change notes:"/>
                   <toolTipText value="Что было сделано и как протестировать?"/>
+                </properties>
+              </component>
+              <component id="42b6c" class="javax.swing.JCheckBox" binding="statusCommentChbx">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="is parent's commit"/>
                 </properties>
               </component>
             </children>
